popup overlay z-index fix

--- a/scss/standart-components/standart-components.scss
+++ b/scss/standart-components/standart-components.scss
@@ -182,7 +182,7 @@ input:focus
 		{
 			font-size: 14px;
 			color: #9DABB3;
-			line-height: 16px;	
+			line-height: 16px;
 		}
 	}
 }
@@ -197,12 +197,13 @@ input:focus
 	visibility: hidden;
 	opacity: 0;
 	transition: all 0.3s;
-	z-index: 4;
+	z-index: -10;
 	&._show
 	{
 		visibility: visible;
 		opacity: 1;
 		transition: all 0.3s;
+		z-index: 4;
 	}
 }
 .popup
